# gbpjpy-trader

./: .gitignore  GBPJPY_AI_Bot_Blueprint.docx  REPORT.md  STATUS.md  config.json  main.py  pyproject.toml  setup.py
.claude/: settings.local.json
ai_server/: news_shield.py  scorer.py  server.py  server_test.py  telegram_alerts.py
backtest_results/: walk_forward_scalper.json  walk_forward_swing.json
data/: scaler_entry_quality.pkl
data_pipeline/: data_validator.py  download_dukascopy.py  export_mt5_data.py  feature_engineer.py  label_generator.py  resample_timeframes.py
db/: setup_db.py  trades.db
models/: scalper_bilstm_history.json  scalper_ensemble_weights.json  scalper_xgb.json  swing_bilstm.keras  swing_bilstm_best.keras  swing_bilstm_history.json  swing_ensemble_weights.json  swing_optuna_results.json  swing_xgb.json
scalper_ea/: AIClient.mqh  CascadeEntry.mqh  CorrelationFilter.mqh  DirectionLayer.mqh  EntryLayer.mqh  ExitManager.mqh  FeatureBuilder.mqh  FileAIClient.mqh  RiskManager.mqh  ScalperEA.mq5  SocketTest.mq5  TelegramMQL5.mqh
swing_ea/: AIClient.mqh  BoJWatchdog.mqh  CarryTradeFilter.mqh  FeatureBuilder.mqh  FileAIClient.mqh  RiskManager.mqh  SwingEA.mq5  SwingEntry1H.mqh  SwingPositionManager.mqh  TelegramMQL5.mqh  TrendAnalyzer4H.mqh
training/: prepare_sequences.py  train_scalper_model.py  train_swing_model.py  tune_swing_xgb.py  walk_forward.py
